@@ -1,5 +1,11 @@
 2019-09-08 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/pdk/gen.c,
+	  src/pdk/ralloc2.cc:
+	  Improve push.
+
+2019-09-08 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/pdk/gen.c:
 	  Improve use of proposed sp-relative addressing mode.
 
